# zermelos-navigation-problem

./: .gitignore  README.md  produce_plots.py  pyproject.toml
adiabatic_computation/: __init__.py  hamiltonian.py  initial_states.py  river.py  schedulers.py  schrodinger.py  sigma.py  solvers.py
adiabatic_computation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: LandauZener.ipynb  Plots.ipynb  optimization.ipynb  test_solvers.ipynb  testing.ipynb  troubleshoot.ipynb  yves_method.ipynb
notebooks/.ipynb_checkpoints/: LandauZener-checkpoint.ipynb
plots/fidelity/data/: results_F0.9_N2000_T15-1500.csv
scripts/: convergence.py  dense_sweep.py  eigenplots.py  energy_gap.py  fidelity_threshold.py
src/: LandauZener.ipynb  Plots.ipynb  Untitled.ipynb  aco.py  benchmark.py  convergence.py  crossing-2-excel.py  eigenplots.py  index.html  lz_prod_script.py  main.py  optimization.ipynb  plot.py  prod_script.py  prod_script_fid_search.py  prod_script_lz_tdse.py  requirements.txt  sa.py  size.py  test.py  test2.py  test_solvers.ipynb  testing_plots.py  yves.py  yves_method.ipynb
src/data/: 100_-1_15_1350_1_fids.csv  100_-1_15_1350_5_fids.csv  100_-1_15_1500_10_fids.csv  100_-1_15_1500_1_fids.csv
src/data/1350/: 100_-1_15_1350_10_fids.csv  100_-1_15_1350_15_fids.csv  100_-1_15_1350_1_fids.csv
src/data/1500/: 150_-1_15_1500_10_fids.csv  150_-1_15_1500_15_fids.csv  150_-1_15_1500_1_fids.csv  150_-1_15_1500_5_fids.csv  (+1 more)
src/lib/: __init__.py  data_store.py  hamiltonian.py  initial_states.py  schedulers.py  schrodinger.py  sigma.py  solvers.py  time.py
(+57 files in other folders)
