[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adiabatic_computation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "joblib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adiabatic_computation*"]
